# AutoMONAI

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  biome.json  featurelist.md  pyproject.toml  pytest.ini
UI/: README.md  server.py
UI/cli/: __init__.py  gui.py  tui.py
UI/configs/: config_2026-03-02T10-51-46.json
UI/gui/: index.html  launch.js  results.js  script.js  styles.css
UI/gui/js/: api.js  command.js  configs.js  init.js  nav.js  search.js  theme.js  ui-actions.js
UI/gui/styles/: augmentation.css  base.css  components.css  configs.css  launch.css  modals.css  results.css
UI/routers/: config.py  configs.py  launch.py  results.py
UI/tui/: .gitignore  README.md  go.mod  main.go
automonai/: __init__.py
automonai/backend/: README.md  __init__.py  server.py
automonai/backend/cli/: gui.py
automonai/backend/routers/: config.py  configs.py  launch.py
automonai/backend/tests/: test_config_routes.py  test_configs.py  test_configs_ensemble.py  test_launch.py  test_server.py
automonai/core/: cli.py  config.py  dataset.py  inference.py  models.py  results.py  run.py  train.py
automonai/core/tests/: README.md  conftest.py  test_cli_new_args.py  test_dataset.py  test_ensemble.py  test_inferers.py  test_integration.py  test_losses.py  test_models.py  test_results.py  test_split_validate.py  test_train.py  test_transforms.py  test_wandb.py
automonai/frontend/: index.html  launch.js
automonai/frontend/js/: api.js  command.js  configs.js  init.js  ui-actions.js
automonai/frontend/styles/: augmentation.css  base.css  components.css  configs.css  launch.css  modals.css
docs/: configs.md
src/: cli.py  config.py  dataset.py  inference.py  inferers.py  models.py  results.py  run.py  train.py  transforms.py
src/tests/: README.md  test_integration.py  test_losses.py  test_models.py  test_results.py  test_train.py  test_transforms.py
